--- a/app/src/main/res/layout/fragment_dialog_create_card.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_card.xml
@@ -33,7 +33,7 @@
         android:ems="10"
         android:hint="@string/back_text"
         android:inputType="text"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/insert_mode_radio_button_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -47,7 +47,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_back_edit_text">
 
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:text="@string/append" />
 
         <RadioButton
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:text="@string/prepend" />
     </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
