--- a/app/src/main/res/layout/fragment_dialog_create_task.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_task.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/task_name_edit_text"
-        android:layout_width="365dp"
-        android:layout_height="62dp"
+        android:id="@+id/card_front_edit_text"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
+        android:hint="Task Name"
         android:inputType="text"
-        android:text="Task Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
