--- a/app/src/main/res/layout/fragment_dialog_create_pending.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_pending.xml
@@ -7,49 +7,75 @@
 
     <EditText
         android:id="@+id/card_front_edit_text"
-        android:layout_width="376dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
-        android:hint="Task Name"
+        android:hint="Enter new task name..."
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/chipGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/tag_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:padding="16dp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_front_edit_text">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/home_chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="H" />
+        <ImageView
+            android:id="@+id/homeTag"
+            android:contentDescription="home tag"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/home"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerInside" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/work_chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="W" />
+        <ImageView
+            android:id="@+id/workTag"
+            android:contentDescription="work tag"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/work"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerInside" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/school_chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S" />
+        <ImageView
+            android:id="@+id/schoolTag"
+            android:contentDescription="school tag"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/school"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerInside" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/errand_chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E" />
-    </com.google.android.material.chip.ChipGroup>
+        <ImageView
+            android:id="@+id/errandTag"
+            android:contentDescription="errand tag"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/errand"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerInside" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
