--- a/app/src/main/res/layout/recurring_tasks_fragment.xml
+++ b/app/src/main/res/layout/recurring_tasks_fragment.xml
@@ -5,44 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Focus Mode Button -->
+    <ImageButton
+        android:id="@+id/focus_mode_button"
+        android:src="@drawable/hamburger"
+        android:contentDescription="@string/focus_mode"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="4dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner" />
+
     <!-- Spinner -->
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:gravity="start"
-        android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toEndOf="@+id/focus_mode_button"
         app:layout_constraintEnd_toStartOf="@+id/buttonLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/focus_mode_button" />
 
     <!-- LinearLayout for buttons -->
     <LinearLayout
         android:id="@+id/buttonLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="12dp">
+        app:layout_constraintBottom_toBottomOf="@+id/focus_mode_button">
 
         <!-- Advance Button -->
         <Button
             android:id="@+id/advanceButton"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="8dp"
             android:text="+1 Day" />
 
         <!-- Add Button -->
         <Button
             android:id="@+id/AddButton"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="+" />
     </LinearLayout>
 
@@ -54,7 +63,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
         tools:listitem="@layout/task_item">
     </ListView>
 
