--- a/app/src/main/res/layout/tmr_tasks_fragment.xml
+++ b/app/src/main/res/layout/tmr_tasks_fragment.xml
@@ -5,19 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Focus Mode Button -->
-    <ImageButton
-        android:id="@+id/focus_mode_button"
-        android:src="@drawable/hamburger"
-        android:contentDescription="@string/focus_mode"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="4dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner" />
-
     <!-- Spinner -->
     <Spinner
         android:id="@+id/spinner"
@@ -36,7 +23,8 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/focus_mode_button">
+        app:layout_constraintBottom_toBottomOf="@+id/focus_mode_button"
+        tools:ignore="UnknownIdInLayout">
 
         <!-- Advance Button -->
         <Button
