Recurring Task updated

--- a/app/src/main/res/layout/fragment_dialog_create_recurring.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_recurring.xml
@@ -18,28 +18,57 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/editTextYear"
+        android:layout_width="120dp"
+        android:layout_height="45dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="8dp"
-        android:hint="Starting date..."
-        android:inputType="date"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="Year"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/editTextMonth"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_front_edit_text" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="106dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="7dp"
+        android:ems="10"
+        android:hint="Date"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextMonth"
+        app:layout_constraintTop_toBottomOf="@+id/card_front_edit_text"
+        tools:hint="Date" />
+
+    <EditText
+        android:id="@+id/editTextMonth"
+        android:layout_width="129dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:ems="10"
+        android:hint="Month"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
+        app:layout_constraintStart_toEndOf="@+id/editTextYear"
         app:layout_constraintTop_toBottomOf="@+id/card_front_edit_text" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/chipGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        android:layout_marginTop="8dp">
+        app:layout_constraintTop_toBottomOf="@+id/editTextYear">
 
         <RadioButton
             android:id="@+id/daily_radio_button"
