--- a/app/src/main/res/layout/tasks_fragment.xml
+++ b/app/src/main/res/layout/tasks_fragment.xml
@@ -5,6 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textViewNoTasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_goals_text"
+        android:visibility="gone"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:padding="16dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <!-- Spinner -->
     <Spinner
         android:id="@+id/spinner"
